--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 
     <nav class="desktop-menu">
       <div>
-        <div class="container-fluid pt-2 pb-3 px-5 bg-b-g">
+        <div class="container-fluid bg-b-g">
           <div class="row justify-content-between align-items-center">
             <div class="row justify-content-around align-items-center">
               <div class="col text-left my-auto">
                 <a href="./index.html"
                   ><img
-                    src="./images/conv42.png"
+                    src="./loading.gif"
                     alt=""
-                    style="width: 6vw; height: auto"
+                    style="width: 14vw; height: auto"
                 /></a>
               </div>
               <div>•</div>
@@ -60,11 +60,45 @@
                   ><img
                     src="./images/nid-logo.png"
                     alt=""
-                    style="width: 8vw; height: auto"
+                    style="width: 12vw; height: 100%"
                 /></a>
               </div>
             </div>
-            <div class="col-9 p-0">
+            <div class="accordian_container">
+              <div class="interesting-accordian1">
+                <div class="accordian bg-cmd">
+                  <h1 class="accordian-titles">Communication Design</h1>
+                  <p class="accordian-details">Communication Design</p>
+                  <img src="./images/cmd.svg" alt="" />
+                </div>
+                <div class="accordian bg-idd">
+                  <h1 class="accordian-titles">Industrial Design</h1>
+                  <p class="accordian-details">Industrial Design</p>
+                  <img src="./images/idd.svg" alt="" />
+                </div>
+                <div class="accordian">
+                  <h1 class="accordian-titles">Interdisciplinary Design</h1>
+                  <p class="accordian-details">Interdisciplinary Design</p>
+                  <img src="./images/ind.svg" alt="" />
+                </div>
+                <div class="accordian">
+                  <h1 class="accordian-titles">IT Integrated</h1>
+                  <p class="accordian-details">IT Integrated</p>
+                  <img src="./images/itd.svg" alt="" />
+                </div>
+                <div class="accordian">
+                  64
+                  <h1 class="accordian-titles">
+                    Textile, Apparel, Lifestyle & Accessory Design
+                  </h1>
+                  <p class="accordian-details">
+                    Textile, Apparel, Lifestyle & Accessory Design
+                  </p>
+                  <img src="./images/txd.svg" alt="" />
+                </div>
+              </div>
+            </div>
+            <!-- <div class="col-9 p-0">
               <div class="col p-0">
                 <div class="row design-faculty-bar align_center">
                   <div class="col text-center">
@@ -119,7 +153,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -128,27 +162,29 @@
     <div class="accordian_container">
       <div class="interesting-accordian1">
         <div class="accordian">
-          <h1 class="accordian-titles">COMD</h1>
+          <h1 class="accordian-titles">Communication Design</h1>
           <p class="accordian-details">Communication Design</p>
           <img src="./images/cmd.svg" alt="" />
         </div>
         <div class="accordian">
-          <h1 class="accordian-titles">INDU</h1>
+          <h1 class="accordian-titles">Industrial Design</h1>
           <p class="accordian-details">Industrial Design</p>
           <img src="./images/idd.svg" alt="" />
         </div>
         <div class="accordian">
-          <h1 class="accordian-titles">INTD</h1>
+          <h1 class="accordian-titles">Interdisciplinary Design</h1>
           <p class="accordian-details">Interdisciplinary Design</p>
           <img src="./images/ind.svg" alt="" />
         </div>
         <div class="accordian">
-          <h1 class="accordian-titles">ITIN</h1>
+          <h1 class="accordian-titles">IT Integrated</h1>
           <p class="accordian-details">IT Integrated</p>
           <img src="./images/itd.svg" alt="" />
         </div>
         <div class="accordian">
-          <h1 class="accordian-titles">TALD</h1>
+          <h1 class="accordian-titles">
+            Textile, Apparel, Lifestyle & Accessory Design
+          </h1>
           <p class="accordian-details">
             Textile, Apparel, Lifestyle & Accessory Design
           </p>
